# graphlet

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix
.githooks/: pre-commit
.normalize/: config.toml
crates/graphlet/: Cargo.toml
crates/graphlet/examples/: scalable_bench.rs
crates/graphlet/src/: canonical.rs  catalog.rs  census.rs  lib.rs  orbit.rs  rim.rs  snapshot.rs  template.rs  tests.rs
crates/graphlet/src/rim/: kernels.rs  neighborhood.rs  null_model.rs  scalable.rs  significance.rs
crates/graphlet/src/rim/directed/: canonical.rs  census.rs  mod.rs  orbit.rs  snapshot.rs  triad.rs
docs/: census.md  index.md  introduction.md  motifs.md  orbits.md  package.json  templates.md
docs/.vitepress/: config.ts
